@@ -1,3 +1,11 @@
+Wed May 16 16:33:59 UTC 2012  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * XSC/be/CXX/Header.cpp:
+        * XSC/be/CXX/TypeInfoSource.cpp:
+        * XSC/be/CXX/WriterHeader.cpp:
+
+          Compilation error; compiler warnings.
+
 Wed May 16 12:07:20 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * XSC/be/CXX/Header.cpp:
